--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   multi_select_flutter: ^4.1.3
   chips_choice: ^3.0.0
   intl: ^0.18.0
+  firebase_database: ^10.1.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
